# vda5050_interfaces

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build.yml
include/vda5050_interfaces/json_utils/: action.hpp  action_parameter.hpp  action_parameter_factsheet.hpp  action_parameter_value.hpp  action_state.hpp  agv_action.hpp  agv_geometry.hpp  agv_position.hpp  battery_state.hpp  bounding_box_reference.hpp  connection.hpp  control_point.hpp  edge.hpp  edge_state.hpp  envelope2d.hpp  envelope3d.hpp  error.hpp  error_reference.hpp  factsheet.hpp  header.hpp  info.hpp  info_reference.hpp  instant_actions.hpp  load.hpp  load_dimensions.hpp  load_set.hpp  load_specification.hpp  max_array_lens.hpp  max_string_lens.hpp  network.hpp  node.hpp  node_position.hpp  node_state.hpp  optional_parameters.hpp  order.hpp  physical_parameters.hpp  polygon_point.hpp  position.hpp  protocol_features.hpp  protocol_limits.hpp  (+10 more)
include/vda5050_msgs/json_utils/: action.hpp  action_parameter.hpp  action_parameter_factsheet.hpp  action_parameter_value.hpp  action_state.hpp  agv_action.hpp  agv_geometry.hpp  agv_position.hpp  battery_state.hpp  bounding_box_reference.hpp  connection.hpp  control_point.hpp  edge.hpp  edge_state.hpp  envelope2d.hpp  envelope3d.hpp  error.hpp  error_reference.hpp  factsheet.hpp  factsheet_action_parameter.hpp  header.hpp  info.hpp  info_reference.hpp  instantAction.hpp  instantActions.hpp  instant_actions.hpp  load.hpp  load_dimensions.hpp  load_set.hpp  load_specification.hpp  load_specifications.hpp  max_array_lens.hpp  max_string_lens.hpp  network.hpp  node.hpp  node_position.hpp  node_state.hpp  optional_parameters.hpp  order.hpp  physical_parameters.hpp  (+16 more)
json_schemas/: schemas.cpp
msg/: AGVAction.msg  AGVGeometry.msg  AGVPosition.msg  Action.msg  ActionParameter.msg  ActionParameterFactsheet.msg  ActionParameterValue.msg  ActionState.msg  AgvAction.msg  AgvGeometry.msg  BatteryState.msg  BoundingBoxReference.msg  Connection.msg  ControlPoint.msg  Edge.msg  EdgeState.msg  Envelope2d.msg  Envelope3d.msg  Error.msg  ErrorReference.msg  Factsheet.msg  FactsheetActionParameter.msg  Header.msg  Information.msg  InstantAction.msg  InstantActions.msg  Load.msg  LoadDimensions.msg  LoadSpecification.msg  MaxArrayLens.msg  MaxStringLens.msg  Network.msg  Node.msg  NodePosition.msg  NodeState.msg  OptionalBool.msg  OptionalFloat64.msg  OptionalParameters.msg  OptionalString.msg  OptionalUInt32.msg  (+14 more)
src/vda5050_msgs/json_utils/: connection.cpp  header.cpp
test/: test_json_utils.cpp  test_json_validators.cpp
test/generator/: generator.hpp  jsonGenerator.hpp
